Attempt dio connection

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 server.servlet.context-path=/community
 
 # Thymeleaf Properties
-spring.thymeleaf.cache=false
+# spring.thymeleaf.cache=false
 
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
