Add log support

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -26,3 +26,4 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 logging.level.com.nowcoder.community=debug
+#logging.file= /path/to/file/***.log
