Add some features...

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -27,3 +27,19 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 logging.level.com.nowcoder.community=debug
 #logging.file= /path/to/file/***.log
+
+# MailProperties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=servicepetcom@gmail.com
+spring.mail.password=petcom123
+spring.mail.protocol=smtps
+spring.mail.properties..mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.smtp.debug=true
+
+
+# Community
+community.path.domain=http://localhost:8080
+
