--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
 
 dev_dependencies:
   font_awesome_flutter: ^8.11.0
-  http: ^0.12.2
   dio: ^3.0.10
+  json_serializable: ^3.5.1
+  build_runner: ^1.11.1
   flutter_svg: ^0.19.1
+  flutter_staggered_grid_view: ^0.3.4
   flutter_test:
     sdk: flutter
 
