--- a/.gitignore
+++ b/.gitignore
@@ -116,4 +116,7 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 
+
 **/community/src/main/resources/templates
+**/community/src/main/resources/static
+
