--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,15 +27,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  font_awesome_flutter: ^8.11.0
-  dio: ^3.0.10
-  json_serializable: ^3.5.1
-  build_runner: ^1.11.1
-  flutter_svg: ^0.19.1
-  flutter_staggered_grid_view: ^0.3.4
+  font_awesome_flutter: ^9.0.0-nullsafety
+  dio: ^4.0.0-beta6
+  flutter_svg: ^0.21.0-nullsafety.0
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  flutter_staggered_animations: "^1.0.0"
   flutter_test:
     sdk: flutter
 
