--- a/community/pom.xml
+++ b/community/pom.xml
@@ -16,27 +16,12 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	<dependencyManagement>
-        <dependencies>
-          <dependency>
-          <groupId>org.springframework.cloud</groupId>
-          <artifactId>spring-cloud-gcp-dependencies</artifactId>
-          <version>1.0.0.RC1</version>
-          <type>pom</type>
-          <scope>import</scope>
-          </dependency>
-      </dependencies>
-    </dependencyManagement>
 	<dependencies>
-		...
-		<!-- Add CloudSQL Starter for MySQL -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
+			<artifactId>spring-cloud-gcp-starter</artifactId>
+			<version>1.2.7.RELEASE</version>
 		</dependency>
-		...
-	</dependencies>
-	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
@@ -99,14 +84,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<repositories>
-		<!-- Use Spring Milestone Repository -->
-		<repository>
-			<id>repository.spring.milestone</id>
-			<name>Spring Milestones Repository</name>
-			<url>http://repo.spring.io/milestone</url>
-		</repository>
-	</repositories>
 	<build>
 		<plugins>
 			<plugin>
