--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  loadmore: ^2.0.0
 dev_dependencies:
   font_awesome_flutter: ^9.0.0-nullsafety
   dio: ^4.0.0-beta6
