--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   dio: ^4.0.0-beta6
   flutter_svg: ^0.21.0-nullsafety.0
   flutter_staggered_animations: "^1.0.0"
+  cached_network_image: 3.0.0-nullsafety
   flutter_test:
     sdk: flutter
 
