--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   flutter_svg: ^0.21.0-nullsafety.0
   flutter_staggered_animations: "^1.0.0"
   cached_network_image: 3.0.0-nullsafety
+  english_words: ^3.1.0
   flutter_test:
     sdk: flutter
 
