--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   loadmore: ^2.0.0
 dev_dependencies:
   font_awesome_flutter: ^9.0.0-nullsafety
-  dio: ^4.0.0-beta6
+  dio: ^4.0.0
   flutter_svg: ^0.21.0-nullsafety.0
   flutter_staggered_animations: "^1.0.0"
   cached_network_image: 3.0.0-nullsafety
+  direct_select: ^2.0.0
   flutter_test:
     sdk: flutter
 
