--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.0.0-nullsafety
   dio: ^4.0.0
-  flutter_svg: ^0.21.0-nullsafety.0
   flutter_staggered_animations: "^1.0.0"
   direct_select: ^2.0.0
+  material_dialogs: ^1.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
