--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community?allowPublicKeyRetrieval=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysqldb/community?allowPublicKeyRetrieval=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
