--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.thymeleaf.cache=false
 
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqldb/community?allowPublicKeyRetrieval=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://petcomsql.c8u2takufsxf.us-east-2.rds.amazonaws.com:3306/community?allowPublicKeyRetrieval=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=petcompassword
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
